--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="cart-footer">
         <h3>Total: R$ <span class="cart-total">0.00</span></h3>
         <button class="limpar-carrinho" onclick="limparCarrinho()">Limpar Carrinho</button>
-        <button class="checkout-btn">Finalizar Compra</button>
+        <button class="btn-finalizar" onclick="finalizarCompra()">Finalizar Compra</button>
       </div>
     </div>
   </div>
