--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boutique Animal Online</title>
 
-  <!-- Link do CSS -->
-  <link rel="stylesheet" href="style.css">
-
+  <!-- Link -->
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js"></script>
   <!-- (Opcional) Ícone da aba -->
   <link rel="icon" href="img/carrinho.png" type="image/png">
 </head>
@@ -108,7 +108,8 @@
     </div>
   </div>
 
-  <!-- Importa o JavaScript -->
+  <!-- Importa o JavaScript e CSS -->
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </body>
 </html>
