--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
   
-  <!-- (Opcional) Ícone da aba -->
+  <!-- Ícone da aba -->
   <link rel="icon" href="img/carrinho.png" type="image/png">
 </head>
 
